HTML & CSS tweaks, minor changes and fixes
Fixed row height inconsistencies:
- within editable groups by removing extra margins from input fields
- removed bottom margin from all rows last elements

Allowed for toggle groups to be with or without bottom borders

Fixed ticked-add message box button wrapping

--- a/_sass/base/_forms.scss
+++ b/_sass/base/_forms.scss
@@ -35,7 +35,6 @@ select[multiple=multiple] {
   box-sizing: border-box;
   font-family: $base-font-family;
   font-size: $base-font-size;
-  margin-bottom: $small-spacing;
   padding: $base-spacing / 3;
   transition: border-color $base-duration $base-timing;
   width: 100%;
